add angular structure - update city service - add api config

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CS": "Data Source=.;Initial Catalog=vezeeta;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:61955",
+    "Secret": "ByYM000OLlMQG6VVVp1OH7Xzyr7gHuw1qvUC5dcGt3SNM"
+  }
 }
