--- a/Consumer/ClientApp/package.json
+++ b/Consumer/ClientApp/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser-dynamic": "8.2.12",
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "node-sass": "^5.0.0",
     "oidc-client": "^1.11.3",
     "popper.js": "^1.16.0",
