--- a/Angular/angular.json
+++ b/Angular/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "f263386c-be6c-4979-b7fa-454346580c54"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
