Update Services for doctor

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -5,6 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="d\**" />
+    <Content Remove="d\**" />
+    <EmbeddedResource Remove="d\**" />
+    <None Remove="d\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,8 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Resources\" />
     <Folder Include="StaticFiles\Images\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 
 </Project>
