manage doctor SubSpecialty

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Folder Include="Resources\" />
     <Folder Include="StaticFiles\Images\" />
+    <Folder Include="StaticFiles\Images\" />
   </ItemGroup>
 
 </Project>
