--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,15 @@ FodyWeavers.xsd
 /DAL/Migrations/20210606222430_init3.cs
 /DAL/Migrations/20210606141148_init2.Designer.cs
 /DAL/Migrations/20210606222430_init3.Designer.cs
+/DAL/Migrations/20210608150209_init.cs
+/DAL/Migrations/20210608150209_init.Designer.cs
+/DAL/Migrations/20210611025935_init6.cs
+/DAL/Migrations/20210610234158_init5.Designer.cs
+/DAL/Migrations/20210610234158_init5.cs
+/DAL/Migrations/20210610233932_init4.Designer.cs
+/DAL/Migrations/20210610233932_init4.cs
+/DAL/Migrations/20210610121153_init3.Designer.cs
+/DAL/Migrations/20210610121153_init3.cs
+/DAL/Migrations/20210609215332_init2.Designer.cs
+/DAL/Migrations/20210609215332_init2.cs
+/DAL/Migrations/20210611025935_init6.Designer.cs
