--- a/Angular/package.json
+++ b/Angular/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^6.1.0",
     "angular-ng-autocomplete": "^2.0.5",
     "bootstrap-icons": "^1.5.0",
+    "ngx-bar-rating": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
