Order doctor By rating + Add image to register doctor +modify doctor offer image insertation

--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,9 @@ FodyWeavers.xsd
 /DAL/Migrations/20210611025935_init6.Designer.cs
 /DAL/Migrations/20210621140829__init3.cs
 /DAL/Migrations/20210621140829__init3.Designer.cs
+/API/Resources/Images/20191101_144649.jpg
+/API/Resources/Images/20190828_113710.jpg
+/API/Resources/Images/20200113_112140.jpg
+/API/Resources/Images/20191116_024617.jpg
+/API/Resources/Images/20nvhvn.jpg
+/API/StaticFiles/Images/20191231_222546.jpg
